{{infl|en|adjective}} <multicolour#4811644>

--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -1,13 +1,13 @@
 ==English==
 
 ===Etymology===
-Latin [[multi]] + [[colour]]
+{{L.}} {{prefix|multi|colour}}
 
 ===Alternative spellings===
 *{{i-c|Chiefly American}} [[multicolor]]
 
 ===Adjective===
-'''multicolour'''
+{{infl|en|adjective}}
 
 # (''Chiefly Canadian, Australian, Jamaican, British, International'') Having, [[resembling]], or pertaining to many or a world of [[colour]]s.
 
