-(''Chiefly Canadian, Australian, Jamaican, British, International'') +{{chiefly|Canadian|Australian|Jamaican|British|International}} <multicolour#4811927>

--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -4,21 +4,21 @@
 {{L.}} {{prefix|multi|colour}}
 
 ===Alternative spellings===
-*{{i-c|Chiefly American}} [[multicolor]]
+* {{i-c|Chiefly American}} [[multicolor]]
 
 ===Adjective===
 {{infl|en|adjective}}
 
-# (''Chiefly Canadian, Australian, Jamaican, British, International'') Having, [[resembling]], or pertaining to many or a world of [[colour]]s.
+# {{chiefly|Canadian|Australian|Jamaican|British|International}} Having, [[resembling]], or pertaining to many or a world of [[colour]]s.
 
 ====Translations====
-*Dutch: [[bont]], [[bonte]], [[veelkleurig]], [[veelkleurige]]
-*Esperanto: [[multkolora]]
-*French: [[multicouleur]]
-*German: [[bunt]],[[vielfarbig]]
-*Italian: [[multicolore]]
-*Latin: [[multicolor]]
-*Romanian: [[multicolor]]
+* Dutch: [[bont]], [[bonte]], [[veelkleurig]], [[veelkleurige]]
+* Esperanto: [[multkolora]]
+* French: [[multicouleur]]
+* German: [[bunt]],[[vielfarbig]]
+* Italian: [[multicolore]]
+* Latin: [[multicolor]]
+* Romanian: [[multicolor]]
 
 [[fr:multicolour]]
 [[pl:multicolour]]
