--- a/en/m/multi-billion.34077.wikitext
+++ b/en/m/multi-billion.34077.wikitext
@@ -13,8 +13,8 @@ MOHL-tee-BIL-li-uhn
 # Having more than 1,000,000,000 in the billion range.
 # In the old numering system (''Notably British''), equivalent to more than 1,000,000,000,000 in the old billion range.
 
-===Translations===
+====Translations====
 
-*French: [[multi-billion]]
-*Italian: [[multi-billione]]
-*Latin: multi-billion
+* French: [[multi-billion]]
+* Italian: [[multi-billione]]
+* Latin: multi-billion
