--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -3,8 +3,8 @@
 ===Suffix===
 '''-ica'''
 
-# Suffix appended to words to create a feminine noun, commonly used for forming diminituves, denoting a profession, human relation, term of endearment, document, paper, or to form a proper name.
-# Suffix appended to words to create a masculine or feminine noun, usually a pejorative.
+# Suffix appended to words to create a feminine noun, commonly used for forming [[diminutives]], denoting a profession, human relation, term of endearment, document, paper, or to form a proper name.
+# Suffix appended to words to create a masculine or feminine noun, usually a [[pejorative]].
 
 ===See also===
 * {{l|hr|-čica}}
