template -Abbreviation +abbreviation <w/o#4820736>

--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -1,12 +1,13 @@
 ==English==
 
-==={{Abbreviation}}===
+==={{abbreviation}}===
 '''w/o'''
+
 # [[with]] [[out]]; [[without]]
 # {{context|finance|insurance}} [[write]] [[off]]; [[write-off]]
 
 ===Related terms===
-*[[w/]]
-*[[w/i]]
+* [[w/]]
+* [[w/i]]
 
 [[fi:w/o]]
