--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -19,7 +19,11 @@
 # Having [[already]] [[happen]]ed before.
 #: ''I didn't do a very good job the first time, and now I have to do it '''again'''.''
 
-====Related terms====
+====Quotations====
+* '''1979''', Charles Edward Daniels et al., “The Devil Went Down to Georgia”, ''Million Mile Reflections'', Charlie Daniels Band, Epic Records
+*: Johnny said, “Devil, just come on back if you ever want to try '''again'''. / I done told you once, you son of a bitch, I'm the best that's ever been.”
+
+====Derived terms====
 * [[again and again]]
 * [[once again]]
 
