--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -1,17 +1,4 @@
-{{see|ak|aK|ak'}}
-==English==
+[[Category:Move to Wiktionary 2007-09]]
+AK is the English short-hand term for the Yiddish expression "alter kaker." Literally "old shitter," it is approximately the equivalent of the English term "old fart." While always vulgar, it can be used affectionately.
 
-==={{abbreviation}}===
-'''AK'''
-
-# [[Alaska]], a state of the [[United States of America]].
-
-[[Category:US States]]
-
-[[ar:AK]]
-[[de:AK]]
-[[fr:AK]]
-[[it:AK]]
-[[pl:AK]]
-[[vi:AK]]
-[[tr:AK]]
+{{seeCites|A.K.}}
