/* Mandarin */ Middle Chinese (from Unihan database) <月#4832289>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -209,6 +209,12 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 
 ----
 
+==Middle Chinese==
+===Han character===
+'''月''' (*[[ngiuæt]])<!--asterisk signifies that this is a reconstructed pronunciation-->
+
+----
+
 ==Vietnamese==
 
 ===Han character===
