--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -6,7 +6,7 @@
 # [[with]] [[out]]; [[without]]
 # {{context|finance|insurance}} [[write]] [[off]]; [[write-off]]
 
-===Related terms===
+====Related terms====
 * [[w/]]
 * [[w/i]]
 
