sorted/rebalanced translations, trans link [[West Frisian]] <weasel#4841673>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -28,19 +28,19 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 * Estonian: [[nirk]]
 * Finnish: {{t+|fi|lumikko}}
 * Greek: {{t+|el|νυφίτσα|f|s|sc=Grek}} (nifítsa)
-* Hungarian: {{t|hu|menyét}}
 {{trans-mid}}
+* Hungarian: {{t|hu|menyét}}
 * Japanese: [[鼬]] ([[イタチ]], itachi)
 * Latvian: [[zebiekste]] {{f}}
 * Polish: {{t+|pl|łasica|f}}
 * Russian: {{t+|ru|ласка|f|tr=láska|sc=Cyrl}}
-* West Frisian: {{t+|fy|wezeling|c|xs=West Frisian}}
+* [[West Frisian]]: {{t+|fy|wezeling|c|xs=West Frisian}}
 {{trans-bottom}}
 
 {{trans-top|any mammal of the genus Mustela}}
 * Japanese: [[イタチ属]] (itachi-zoku)
 {{trans-mid}}
-* West Frisian: {{t-|fy|marter|c|xs=West Frisian}}
+* [[West Frisian]]: {{t-|fy|marter|c|xs=West Frisian}}
 {{trans-bottom}}
 
 {{trans-top|any mammal of the family Mustelidae}}
