--- a/en/w/what's good.801534.wikitext
+++ b/en/w/what's good.801534.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Phrase===
-{{infl|en|Phrasebook|head=[[what]][['s]] [[good]]}}
+{{rfc-auto}}[[Category:Phrasebook]]{{infl|en|phrase|head=[[what]][['s]] [[good]]}}
 
 # {{colloquial}} [[what]] [[is]] [[good]], especially in reference to food.
 # {{slang}} [[what's up]]
