{{en-noun|sg=[[signal]] [[phrase]]}} <signal phrase#4858187>

--- a/en/s/signal phrase.803556.wikitext
+++ b/en/s/signal phrase.803556.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-'''[[signal]] [[phrase]]''' ''(plural '''[[signal phrases]]''')''
+{{en-noun|sg=[[signal]] [[phrase]]}}
 
 # An indication that something is a direct [[quote]].
 #:''"Smith suggests that..." and "In Smith's words..." are both '''signal phrases'''.''
