--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -26,6 +26,18 @@ See [[mini-]]
 
 ----
 
+==Dakota==
+
+===Alternative spellings===
+* [[mni]] (Yankton)
+
+===Noun===
+{{infl|dak|noun}}
+
+# [[water]]
+
+----
+
 ==Italian==
 
 ===Noun===
