--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -42,6 +42,9 @@
 
 ==Spanish==
 
+===Etymology===
+{{etyl|fr|es}} {{term|abandonner|lang=fr}}, from {{proto|Germanic|banna|lang=es}}.
+
 ===Verb===
 {{es-verb-ar|stem=abandon}}
 
