--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -1,13 +1,35 @@
 ==English==
+[[Image:Balkanpeninsula.png|thumb|250px|Balkan peninsula (as defined by the Danube-Sava-Kupa line)]]
 {{wikipedia}}
+===Pronunciation===
+* {{a|UK}} {{IPA|/ˈbɔːl.kənz/|/ˈbɒl.kənz/}}
+* {{a|US}} {{IPA|/ˈbɑl.kənz/|ˈbɔl.kənz/}}
 
 ===Proper noun===
 {{en-proper-noun}}
 
 # A [[geographical]] region in the southeast of Europe, roughly equivalent to the area covered by the former [[Yugoslav]] countries, [[Bulgaria]], [[Albania]], [[Greece]] and sometimes [[Romania]].
+#* '''2002''' — Dennis P. Hupchick, ''The Balkans: From Constantinople to Communism'', p104
+#*: As the Ottomans' victories in the '''Balkans''' multiplied, increasing numbers of Anatolian warriors flocked to their ranks, and their territorial conquests grew.
+
+====Usage notes====
+Used with the definite article {{term|the}}.
+
+====Synonyms====
+* {{sense|geographical region}} [[Balkan Peninsula]]
 
 ====Derived terms====
-*[[Balkan]]
+* [[Balkan]]
+* [[balkanize]]
+
+====Translations====
+{{top}}
+* Asturian {{t-|ast|Balcanes|m}}
+* French {{t+|fr|Balkans|m}}
+{{mid}}
+* Polish: {{t-|pl|Bałkany}}
+* Turkish: {{t+|tr|Balkanlar}}
+{{bottom}}
 
 [[et:Balkans]]
 [[fr:Balkans]]
