--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -31,6 +31,8 @@ Used with the definite article {{term|the}}.
 * Turkish: {{t+|tr|Balkanlar}}
 {{bottom}}
 
+[[Category:Place names]]
+
 [[et:Balkans]]
 [[fr:Balkans]]
 [[lt:Balkans]]
