--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈbɔːl.kənz/|/ˈbɒl.kənz/}}
-* {{a|US}} {{IPA|/ˈbɑl.kənz/|ˈbɔl.kənz/}}
+* {{a|US}} {{IPA|/ˈbɑl.kənz/|/ˈbɔl.kənz/}}
 
 ===Proper noun===
 {{en-proper-noun}}
