--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -32,7 +32,7 @@
 * Hungarian: [[vérzik]]
 * Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
 {{trans-mid}}
-* Italian: buttare sangue
+* Italian: [[sanguinare]]
 * Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
 * Polish: [[krwawić]]
 * Portuguese: {{t+|pt|sangrar}}
