--- a/en/f/Final Judgment.746607.wikitext
+++ b/en/f/Final Judgment.746607.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Proper noun===
-{{en-proper noun|sg=[[Final]] [[Judgment]]}}
+{{en-proper noun|sg=[[final|Final]] [[judgment|Judgment]]}}
 
 # {{Christianity}} See main entry at [[Judgment Day]].
