canonical cats <corve#4891664>

--- a/en/c/corve.720109.wikitext
+++ b/en/c/corve.720109.wikitext
@@ -1,8 +1,10 @@
 ==Latin==
+
 ===Noun===
 '''corve''' {{m}}
+
 # {{inflection of|corvus#Latin|corvus|abl|s}}
 
-[[category:Latin noun forms]]
+[[Category:Latin noun forms]]
 
 [[fr:corve]]
