--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -25,20 +25,20 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 * Czech: {{t-|cs|lasice|f}}
 * Danish: {{t+|da|brud|c}}
 * Dutch: {{t+|nl|wezel|f}}
-* Estonian: [[nirk]]
+* Estonian: {{t|et|nirk}}
 * Finnish: {{t+|fi|lumikko}}
-* Greek: {{t+|el|νυφίτσα|f|s|sc=Grek}} (nifítsa)
+* Greek: {{t+|el|νυφίτσα|tr=nifítsa|f|s|sc=Grek}}
 {{trans-mid}}
 * Hungarian: {{t|hu|menyét}}
-* Japanese: [[鼬]] ([[イタチ]], itachi)
-* Latvian: [[zebiekste]] {{f}}
+* Japanese: {{t|ja|鼬|tr=イタチ, itachi|sc=Jpan}}
+* Latvian: {{t|lv|zebiekste|f}}
 * Polish: {{t+|pl|łasica|f}}
 * Russian: {{t+|ru|ласка|f|tr=láska|sc=Cyrl}}
 * [[West Frisian]]: {{t+|fy|wezeling|c|xs=West Frisian}}
 {{trans-bottom}}
 
 {{trans-top|any mammal of the genus Mustela}}
-* Japanese: [[イタチ属]] (itachi-zoku)
+* Japanese: {{t|ja|イタチ属|tr=itachi-zoku|sc=Jpan}}
 {{trans-mid}}
 * [[West Frisian]]: {{t-|fy|marter|c|xs=West Frisian}}
 {{trans-bottom}}
