--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -11,7 +11,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 ===Noun===
 {{en-noun}}
 
-# <!--DefA--> A plant. A [[grass]] of the [[Poeaciae]] family, characterised by its woody, hollow, round, straight, jointed stem.
+# <!--DefA--> A plant. A [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem.
 # <!--DefB--> The wood of the bamboo plant as a material or [[cane]].
 # a [[didgeridoo]]
 
