--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -4,8 +4,8 @@
 {{rank|still|just|while|144|again|also|away|against}}
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/əˈgeɪn}}/}} {{SAMPA|/@"geIn/}}
-* {{a|US}} {{IPA|/əˈgɛn}}/}} {{SAMPA|/@"gEn/}}
+* {{a|UK}} {{IPA|/əˈgeɪn/}} {{SAMPA|/@"geIn/}}
+* {{a|US}} {{IPA|/əˈgɛn/}} {{SAMPA|/@"gEn/}}
 * {{audio|en-us-again.ogg|Audio (US)}}
 *: {{rhymes|eɪn}}
 * Hyphenation: a&middot;gain
