canonical cats <micro#4902017>

--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -1,20 +1,23 @@
 {{see|micro-}}
 ==English==
+
 ===Pronunciation===
 <!--*[[IPA]]: //
-*[[SAMPA]]: //-->
+* [[SAMPA]]: //-->
 MY-kro
 
 ===Etymology===
-:Shortening of '''microcomputer'''
+: Shortening of '''microcomputer'''
 
 ===Noun===
 {{en-noun}}
 
-#Short form of '''[[microcomputer]]'''
+# Short form of '''[[microcomputer]]'''
 
-[[category:Computing]]
+[[Category:Computing]]
+
 ----
+
 ==French==
 
 ===Noun===
