--- a/en/e/Eye-talian.803534.wikitext
+++ b/en/e/Eye-talian.803534.wikitext
@@ -19,3 +19,4 @@
 The spelling represents a pronunciation of ''Italian'' with {{IPA|/aɪ/}} rather than {{IPA|/ɪ/}} or {{IPA|/ə/}}.
 
 [[Category:Eye dialect]]
+[[Category:Informal demonyms]]
