--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -23,7 +23,7 @@
 ====Noun====
 {{en-noun}}
 
-# (''often used in plural'') The border of a territory, which one must [[cross]] in order to enter or leave the territory.
+# {{often|used in plural}} The border of a territory, which one must [[cross]] in order to enter or leave the territory.
 #: ''I reached the northern bound of my [[property]], took a deep [[breath]], and walked on.''
 #: ''Somewhere within these bounds you may find a buried treasure.''
 # {{mathematics}} a [[value]] which is known to be greater or smaller than a given [[set]] of values
