--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -16,6 +16,9 @@ Partly imitative, also influenced by {{term|burble}}.
 # A small spherical [[cavity]] in a solid material.
 # Anything resembling a [[hollow]] sphere.
 # A period of intense [[speculation]] in a market, causing prices to rise quickly to [[irrational]] levels as the [[metaphorical]] bubble expands, and then fall even more quickly as the bubble bursts.
+# {{obsolete}} Someone who has been ‘bubbled’ or [[fooled]]; a [[dupe]].
+#*'''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1979, p. 15:
+#*:For no woman, sure, will plead the passion of love for an excuse.  This would be to own herself the mere tool and '''bubble''' of the man. 
 
 ====Translations====
 {{trans-top|spherically contained volume of air}}
