canonical cats <legatos#4909569>

--- a/en/l/legatos.720225.wikitext
+++ b/en/l/legatos.720225.wikitext
@@ -1,6 +1,8 @@
 ==Latin==
+
 ===Noun===
 '''lēgātōs''' {{m}}
+
 # {{inflection of|legatus#Latin|lēgātus|acc|p}}
 
-[[category:Latin noun forms]]
+[[Category:Latin noun forms]]
