/* Noun */ A frat-boy <pledge#4909739>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -37,6 +37,7 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 {{en-noun}}
 
 # A solemn promise to do something.
+# A person who has taken a pledge of allegiance to a college [[fraternity]].
 # A security to [[guarantee]] [[payment]] of a [[debt]].
 # A [[drinking]] [[toast]].
 # ''(the pledge):'' A promise to [[abstain]] from [[drinking]] [[alcohol]].
