/* Translations */ +ru <pledge#4914069>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -22,6 +22,7 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 * German: {{t-|de|zusichern}}, {{t+|de|versprechen}}
 {{trans-mid}}
 * Latin: {{t|la|spondere}}, {{t|la|vovere}}
+* Russian: [[обещать]], [[заверять]], [[клясться]]
 * Serbian: [[zaloga]], [[zavet]]
 * Slovene: [[zapriseči]], [[zavezati se]], [[zaobljubiti se]]
 {{trans-bottom}}
@@ -31,6 +32,7 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 * French: [[mettre en gage]]
 {{trans-mid}}
 * German: {{t-|de|verpfänden}}
+* Russian: [[отдавать]] в [[залог]], [[закладывать]]
 * Slovene: [[zastaviti]]
 {{trans-bottom}}
 
