--- a/en/c/call outs.802473.wikitext
+++ b/en/c/call outs.802473.wikitext
@@ -1,4 +1,5 @@
 ==English==
 ===Noun===
-{{plural of|call out}}
-# [[Incident]]s of someone being [[called out]].
+'''call outs'''
+
+# {{plural of|call out}}
