canonical cats, header Related terms to L4 <dame#4918876>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -5,14 +5,14 @@
 Via Middle English and Old French from Latin ''[[domina]]''
 
 ===Pronunciation===
-*Rhymes: [[Rhymes:English:-eɪm|-eɪm]]
+* Rhymes: [[Rhymes:English:-eɪm|-eɪm]]
 
 ===Noun===
 {{en-noun}}
 
 # {{UK}} the equivalent title to [[Sir]] for a female knight
-#:  '''''Dame''' Edith Sitwell''
-# {{informal|South Pacific}}[[category:Regional English]] Slightly [[derogatory]] way of referring to a woman.
+#: '''''Dame''' Edith Sitwell''
+# {{informal|South Pacific}} Slightly [[derogatory]] way of referring to a woman.
 #: ''There ain't nothin' like a '''dame'''!''
 # {{archaic}} Lady, woman.
 
@@ -21,7 +21,7 @@ Via Middle English and Old French from Latin ''[[domina]]''
 
 ====Translations====
 {{trans-top|archaic: lady, woman}}
-*Hindi: Urath
+* Hindi: Urath
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -30,15 +30,17 @@ Via Middle English and Old French from Latin ''[[domina]]''
 {{trans-bottom}}
 
 {{trans-top|slightly derogatory way of referring to a woman}}
-*Finnish: [[daami]]
+* Finnish: [[daami]]
 {{trans-mid}}
 {{trans-bottom}}
 
-===Related terms===
-*[[knight]]
-*[[madam]]
-*[[madame]]
-*[[sir]]
+====Related terms====
+* [[knight]]
+* [[madam]]
+* [[madame]]
+* [[sir]]
+
+[[Category:Regional English]]
 
 ----
 
@@ -61,7 +63,6 @@ Via Middle English and Old French from Latin ''[[domina]]''
 # [[lady]]
 # {{chess|lang=nl}} [[queen]].
 
-
 [[Category:Dutch nouns]]
 
 ----
@@ -72,8 +73,8 @@ Via Middle English and Old French from Latin ''[[domina]]''
 From ''[[Latin]]'' ''[[domina]]''
 
 ===Pronunciation===
-*{{audio|Fr-dame.ogg|audio}}
-*{{IPA|[daːm]}}
+* {{audio|Fr-dame.ogg|audio}}
+* {{IPA|[daːm]}}
 
 ===Noun===
 {{fr-noun|f}}
@@ -118,7 +119,7 @@ From ''[[Latin]]'' ''[[domina]]''
 ===Verb===
 '''dame!'''
 
-#[[give]] [[me]]!
+# [[give]] [[me]]!
 #: ''dame'' is the second-person familiar [[imperative]] of ''[[dar]]'', "to [[give]]", with the suffixed first-person singular indirect object pronoun ''[[me]]'', "me".
 
 [[de:dame]]
