/* Translations */ Added translation in Polish <gamble#4924096>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -18,6 +18,7 @@
 * German: {{t+|de|Glücksspiel|n}}
 {{trans-mid}}
 * Japanese: [[賭け]] ([[かけ]], kake), [[ギャンブル]] (gyanburu)
+* Polish: [[hazard]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|a risky venture}}
