--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -86,7 +86,7 @@ From {{ME.}} {{term|benden}} < {{OE.}} {{term|bendan}} to bind or bend (a bow).
 {{trans-top|to change direction}}
 * Dutch: {{t|nl|afbuigen}}, {{t+|nl|buigen}}, {{t+|nl|draaien}}, {{t+|nl|gaan}}
 * Finnish: {{t+|fi|kääntyä}}
-{{trans-mid}}
+{{trans-mid}}--[[Special:Contributions/221.142.74.209|221.142.74.209]] 14:52, 5 August 2008 (UTC)--[[Special:Contributions/221.142.74.209|221.142.74.209]] 14:52, 5 August 2008 (UTC)
 * Italian: {{t-|it|piegarsi}}, {{t|it|curvarsi}}
 {{trans-bottom}}
 
