--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -23,7 +23,7 @@ From {{ME.}} {{term|benden}} < {{OE.}} {{term|bendan}} to bind or bend (a bow).
 #* ''You should '''bend''' the G sligthly sharp in the next measure.''
 # {{context|intransitive|nautical}} To [[swing]] the [[body]] when [[rowing]].
 # {{intransitive}}  To become [[curve]]d.
-#* ''Look at the trees '''bending''' in the wind.''
+#* ''Look up the trees '''bending''' in the wind.''
 #* ''To bow properly, '''bend''' at the waist.''
 # {{intransitive}} To change direction.
 #* ''The road '''bends''' to the right''
