/* Verb */ + adj <bound#4939001>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -15,9 +15,17 @@ See [[bind]]
 ====Verb====
 '''bound'''
 
-# {{past of|bind}}
+# {{past of|[[bind]]}}
 #: ''I '''bound''' the [[splint]] to my leg.''
 #: ''I had '''bound''' the splint with [[duct tape]].''
+
+====Adjective====
+{{en-adj|-}}
+
+# {{context|with infinitive}} Obliged to.
+#: ''Your are not legally '''bound''' to reply.''
+# {{context|with infinitive}} Very likely to.
+#: ''They were '''bound''' to come into conflict eventually.
 
 ===Etymology 2===
 
