/* Derived terms */ rel <bound#4939040>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -159,11 +159,11 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 {{checktrans-bottom}}
 
 =====Derived terms=====
+{{rel-top|terms derived from bound}}
+* [[-bound]]
+{{rel-mid}}
 * [[bound for]]
-* [[eastbound]]
-* [[northbound]]
-* [[southbound]]
-* [[westbound]]
+{{rel-bottom}}
 
 ===Related terms===
 <!--These need to be put under the according etymologies-->
