/* Adjective */ -2 senses that are ety 1 senses <bound#4939052>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -132,12 +132,8 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 
 # {{obsolete}} [[ready|Ready]], [[prepared]].
 # Ready to start or go (to); moving in the direction (of).
-#: ''Is that message bound for me?''
-#: ''Which way are you bound?''
-#: ''The leaking fuel tank was bound to explode sooner or later.''
-# Constrained by something, or [[constrain]]ed to something
-#: ''He was bound to his chair.''
-#: ''Because of his [[oath]], he was bound to follow the king's command.''
+#: ''Is that message '''bound''' for me?''
+#: ''Which way are you '''bound'''?''
 
 =====Translations=====
 {{trans-top|Ready, prepared}}
@@ -159,7 +155,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 {{checktrans-bottom}}
 
 =====Derived terms=====
-{{rel-top|terms derived from bound}}
+{{rel-top|terms derived from bound (moving in the direction of)}}
 * [[-bound]]
 {{rel-mid}}
 * [[bound for]]
