/* See also */ [[sett]], [[set]] - where a badger lives <badger#4941436>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -90,6 +90,7 @@
 {{trans-bottom}}
 
 ====See also====
+* [[sett]], [[set]]
 * [[w:Badger (animal)|Wikipedia article on badgers]]
 * [[Appendix: Animals]]
 
