--- a/en/s/sabre-toothed.801836.wikitext
+++ b/en/s/sabre-toothed.801836.wikitext
@@ -1,5 +1,6 @@
 ==English==
 ===Adjective===
+{{en-adj|-}}
 # Of or pertaining to prehistoric creatures with savage [[teeth]].
 
 ====Derived terms====
