*German: [[Säbelzahntiger]] {{m}} <sabre-toothed tiger#4942395>

--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -8,4 +8,6 @@
 ===Alternative spellings===
 *[[saber-toothed tiger]]
 
+====Translations====
+*German: [[Säbelzahntiger]] {{m}}
 [[Category:Mammals]]
