--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 '''[[sabre]]-[[toothed]] [[tiger]]'''
 
-# Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]
+# Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]. A cat of the [[Machairodontinae]] subfamily of the [[Felidae]].
 
 ===Alternative spellings===
 *[[saber-toothed tiger]]
