--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -1,16 +1,15 @@
 ==English==
 {{wikipedia}}
 
-===Noun===
-'''[[sabre]]-[[toothed]] [[tiger]]'''
-
-# Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]. A cat of the [[Machairodontinae]] subfamily of the [[Felidae]].
-
 ===Alternative spellings===
 * [[saber-toothed tiger]]
 
+===Noun===
+{{en-noun|sg=[[sabre]]-[[toothed]] [[tiger]]}}
+
+# Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]. A cat of the [[Machairodontinae]] subfamily of the [[Felidae]].
+
 ====Translations====
-{{rfc-level|Translations at L4+ not in L3 POS section}}
 * German: [[Säbelzahntiger]] {{m}}
 
 [[Category:Cats]]
