--- a/en/d/DOB.26214.wikitext
+++ b/en/d/DOB.26214.wikitext
@@ -7,3 +7,4 @@
 # Daughters of Bilitis. The first organized and successful Lesbian liberation organization in the United States. 
 
 [[de:DOB]]
+[[zh:DOB]]
