--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -17,8 +17,8 @@ Partly imitative, also influenced by {{term|burble}}.
 # Anything resembling a [[hollow]] sphere.
 # A period of intense [[speculation]] in a market, causing prices to rise quickly to [[irrational]] levels as the [[metaphorical]] bubble expands, and then fall even more quickly as the bubble bursts.
 # {{obsolete}} Someone who has been ‘bubbled’ or [[fooled]]; a [[dupe]].
-#*'''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1979, p. 15:
-#*:For no woman, sure, will plead the passion of love for an excuse.  This would be to own herself the mere tool and '''bubble''' of the man. 
+#* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1979, p. 15:
+#*: For no woman, sure, will plead the passion of love for an excuse.  This would be to own herself the mere tool and '''bubble''' of the man.
 
 ====Translations====
 {{trans-top|spherically contained volume of air}}
@@ -102,8 +102,8 @@ Partly imitative, also influenced by {{term|burble}}.
 
 # {{intransitive}} To produce bubbles, to rise up in bubbles (such in foods cooking).
 # {{transitive|archaic}} To [[cheat]], [[delude]].
-#*'''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1973, p. 443:
-#*:No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government [...]
+#* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1973, p. 443:
+#*: No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government [...]
 # {{intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]].
 
 ====Quotations====
@@ -122,10 +122,12 @@ Partly imitative, also influenced by {{term|burble}}.
 * Swedish: {{t-|sv|bubbla}}
 {{trans-bottom}}
 
+{{rfc-tsort|unknown line format: ''See: '' ''' cheat '''}}
 {{trans-top|to cheat, delude}}
 ''See: '' '''[[cheat]]'''
 {{trans-bottom}}
 
+{{rfc-tsort|unknown line format: ''See: '' ''' weep '''}}
 {{trans-top|to cry, weep}}
 ''See: '' '''[[weep]]'''
 {{trans-bottom}}
