--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -23,7 +23,7 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 * 10<sup>48</sup>: a [[w:Long and short scales|short scale]] [[quindecillion]]
 
 ====Translations====
-{{trans-top|a thousand trillion trillion, 10<sup>27</sup>}}
+{{trans-top|a trillion quadrillion, 10<sup>27</sup>}}
 * Finnish: [[kvadriljardi]]
 * German: [[Quadrilliarde]]
 {{trans-mid}}
