--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -31,7 +31,7 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 * Ukrainian: [[октильйон]]
 {{trans-bottom}}
 
-{{trans-top|a quadrillion quintillion, 10<sup>48</sup>}}
+{{trans-top|a thousand trillion quintillion, 10<sup>48</sup>}}
 * Finnish: [[oktiljoona]]
 {{trans-mid}}
 * German: [[Oktillion]] {{f}}
