--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -6,7 +6,7 @@
 Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[senex]]'', '''old'''
 
 ===Pronunciation===
-*{{a|US}} {{enPR|sûr}}, {{IPA|/sɝ/}}, {{SAMPA|/s3`/}}
+* {{a|US}} {{enPR|sûr}}, {{IPA|/sɝ/}}, {{SAMPA|/s3`/}}
 * {{audio|en-us-sir.ogg|Audio (US)}}
 *: {{rhymes|ɜː(r)}}
 
@@ -35,6 +35,7 @@ Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[sen
 
 {{checktrans}}
 <!--added {{ttbc}}s here.-->
+{{rfc-tsort|unparsed language line: *  ttbc Catalan :  senyor   m }}
 {{trans-top|Translations to be categorized}}
 * {{ttbc|Catalan}}: [[senyor]] {{m}}
 * {{ttbc|Dutch}}: [[heer]] {{m}}, [[meneer]] {{m}}
@@ -56,7 +57,8 @@ Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[sen
 
 ===Verb===
 {{en-verb}}
-#to address somebody using sir
+
+# to address somebody using sir
 #: ''Please don't '''sir''' me!''
 
 ===See also===
