--- a/en/t/throne-room.775063.wikitext
+++ b/en/t/throne-room.775063.wikitext
@@ -4,5 +4,7 @@
 '''throne-room'''
 
 # {{form of|Attributive form|[[throne room]]|nodot=1}}, ''noun''.
-{{#if:{{{2|}}}|#:''{{{2}}}''|}}
+{{#if:|#:''{{{2}}}''|}}
+
 [[Category:English adjectives]]
+{{rfc-subst}}
