--- a/en/u/unisexual.802726.wikitext
+++ b/en/u/unisexual.802726.wikitext
@@ -5,7 +5,7 @@
 {{en-adj|-}}
 
 # Of an organism, having characteristics of single [[sex]] (as opposed to [[hermaphrodite]]s).
-#:''{{{2|Most animals are '''unisexual'''.}}}''
+#: ''Most animals are '''unisexual'''.''
 
 [[io:unisexual]]
 [[hu:unisexual]]
