--- a/en/s/safety-valve.774770.wikitext
+++ b/en/s/safety-valve.774770.wikitext
@@ -4,7 +4,9 @@
 {{en-adj|pos=[[safety]]-[[valve]]|-}}
 
 # {{form of|Attributive form|[[safety valve]]|nodot=1}}, ''noun''.
-{{#if:{{{2|}}}|#:''{{{2}}}''|}}
+{{#if:|#:''{{{2}}}''|}}
+
+{{rfc-subst}}
 
 [[ta:safety-valve]]
 [[vi:safety-valve]]
