--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -32,6 +32,7 @@
 * Chinese (Simplified): [[重量]] (zhòng liàng)
 * Dutch: [[gewicht]]
 * [[Ewe]]: [[kpekpeme]] {{n}}
+* Estonian: {{t|et|kaal}}
 * Finnish: [[paino]]
 * French: [[poids]]
 * German: [[Gewicht]] {{n}}
@@ -64,6 +65,7 @@
 
 {{trans-top|measuring weights}}
 * Chinese (Simplified): [[砝码]] (fá mǎ)
+* Estonian: {{t|et|kaaluma}}
 * Finnish: [[punnus]]
 * Japanese: [[分銅]] (fundō)
 {{trans-mid}}
