--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -104,6 +104,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 * Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
 * {{trreq|Tamil}}
+* [[Telugu]]: {{t|te|వస్తువు|sc=Telu}} (vastuvu)
 * Thai: {{Thai|[[สิ่งของ]]}} (sìng kŏng), {{Thai|[[สิ่ง]]}} (sìng)
 * [[Tupinambá]]: [[mba'e]]
 * Turkish: {{t+|tr|şey}}
@@ -161,7 +162,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * Spanish: {{t+|es|cosa|f}}
 * Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 * Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
-* [[Telugu]]: [[వస్తువు]] (vastuvu)
+* [[Telugu]]: {{t|te|వస్తువు|sc=Telu}} (vastuvu)
 * [[Tupinambá]]: [[mba'e]]
 * Urdu: {{ur-Arab|[[وستو]]}} (vastū) {{m}}, {{ur-Arab|[[چیز]]}} (ćīz) {{f}}
 * Welsh: {{t-|cy|peth|m|xs=Welsh}}
