--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -20,6 +20,7 @@ From the New Testament Greek form of Old Testament [[Zachariah]] and [[Zechariah
 * Swedish: [[Sakarias]]
 {{trans-bottom}}
 
+{{rfc-tsort|unknown line format: ''See:''  Zachary }}
 {{trans-top|male given name}}
 ''See:'' [[Zachary]]
 {{trans-bottom}}
