--- a/en/o/off one's rocket.801514.wikitext
+++ b/en/o/off one's rocket.801514.wikitext
@@ -1,3 +1,8 @@
 ==English==
 
 ===Adjective===
+'''[[off]] [[one's]] [[rocket]]'''
+
+# [[barmy]], [[crazy]], [[insane]]
+
+[[Category:English adjectives]]
