/* Han character */ +alt vi <月#4963058>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -218,7 +218,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[nguyệt]]}}
+{{vi-hantu|[[nguyệt]], [[ngoạt]]}}
 
 # {{defn|Vietnamese}}
 
