--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -211,7 +211,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 
 ==Middle Chinese==
 ===Han character===
-'''月''' (*[[ngiuæt]])<!--asterisk signifies that this is a reconstructed pronunciation-->
+'''月''' (*[[ngiuæt]])<!--asterisk signifies that this character appears more than four times in the Tang Dynasty corpus of literature-->
 
 ----
 
