--- a/en/o/off one's rocket.801514.wikitext
+++ b/en/o/off one's rocket.801514.wikitext
@@ -5,7 +5,7 @@
 A [[mondegreen]] for {{term|off one's rocker||lang=en}}
 
 ===Adjective===
-{{infl|en|adjective|head='''[[off]] [[one's]] [[rocket]]'''}}
+{{infl|en|adjective|head=[[off]] [[one's]] [[rocket]]}}
 
 # [[barmy]], [[crazy]], [[insane]]
 
