--- a/en/o/off one's rocket.801514.wikitext
+++ b/en/o/off one's rocket.801514.wikitext
@@ -2,7 +2,7 @@
 {{rfv}}
 
 ===Etymology===
-A [[mondegreen]] for {{term|off one's rocker||lang=en}}
+A mishearing or reinventing of the expression {{term|off one's rocker||lang=en}}.  ''See'' [[eggcorn]].
 
 ===Adjective===
 {{infl|en|adjective|head=[[off]] [[one's]] [[rocket]]}}
