--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -28,7 +28,7 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 * Esperanto: {{t+|eo|vizelo}}
 * Estonian: {{t+|et|nirk}}
 * Finnish: {{t+|fi|lumikko}}
-* French: {{t+|nl|belette|f}}
+* French: {{t+|fr|belette|f}}
 * German: {{t+|de|Wiesel|n}}
 * Greek: {{t+|el|νυφίτσα}} (nifítsa) {{f}}
 {{trans-mid}}
