--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -14,6 +14,7 @@
 {{top}}
 * Albanian: [[lulelakër]]
 * Arabic: {{Arab|[[قرنبيط]]}} (qarnabīṭ) {{m}}
+* Bosnian: [[karfiol]] {{m}}
 * Bulgarian: [[карфиол]] (karfiol) {{m}}
 * Chinese: [[花椰菜]] (huāyēcài)
 * [[Cornish]]: [[cawlvlejen]]
@@ -28,21 +29,24 @@
 * German: [[Blumenkohl]] {{m}}, [[Karfiol]] {{m}}
 * Greek: [[κουνουπίδι]] (kounoupíði) {{n}}, [[ανθοκράμβη]] (anthokrámvi) {{f}} ''(obsolete)''
 * Hebrew: [[כרובית]] (kruvít) {{f}}
+* Hindi: [[गोभी]] (gobhī)
 * Hungarian: [[karfiol]]
 * Indonesian: [[bungkul]]; [[kubis]] [[bunga]]
 * Italian: [[cavolfiore]] {{m}}
-{{mid}}
 * Japanese: [[カリフラワー]] (korifurawā)
+{{mid}}
 * Latin: [[brassica]] {{f}}
 * Maltese: [[pastarda]] {{f}}
 * [[Neapolitan]]: [[cavelesciore]]
 * Norwegian: [[blomkål]]
-* Persian: {{fa-Arab|[[گل کلم]]}} (gol kalam)
+* Persian: {{fa-Arab|[[گل کلم]]}} (gol-e kalam)
 * Polish: [[kalafior]] {{m}}
 * Portuguese: [[couve-flor]] {{f}}
 * Romanian: [[conopidă]] {{f}}
 * Russian: [[цветная капуста]] (tsvetnája kapústa) {{f}}
-* Serbian: [[карфиол]] (karfiol) {{m}}
+* Serbian:
+*: Cyrillic: [[карфиол]] {{m}}
+*: Roman: [[karfiol]] {{m}}
 * Slovak: [[karfiol]] {{m}}
 * Slovene: [[cvetača]] {{f}}
 * Spanish: [[coliflor]] {{f}}, [[pella]] {{f}} {{italbrac|Northern Spain|specifically Navarra|Spanish Basque Country|Aragon|and La Rioja}}
@@ -50,7 +54,7 @@
 * Thai: {{Thai|[[ดอกกะหล่ำ]]}} (dòk gà-làm)
 * Turkish: [[karnabahar]]
 * Ukrainian: [[кучерява капуста]] (kučerǎva kapusta) {{f}}
-* Urdu: {{ur-Arab|[[گوبى]]}} (gobi)
+* Urdu: {{ur-Arab|[[گوبی]]}} (gobī), {{ur-Arab|[[گوبھی]]}} (gobhī)
 * Vietnamese: [[hoa lơ]], [[hoa lơ trắng]], [[bông cải trắng]]
 * [[Zulu]]: [[ukholifulawa]]
 {{bottom}}
