--- a/en/m/missent.801182.wikitext
+++ b/en/m/missent.801182.wikitext
@@ -15,5 +15,6 @@
 # {{form of|[[third-person|Third-person]] [[plural]] [[imperfect subjunctive]]|mettre|lang=French}}
 
 [[fr:missent]]
+[[sv:missent]]
 [[ta:missent]]
 [[zh:missent]]
