iwiki +ar <moorings#4976257>

--- a/en/m/moorings.720209.wikitext
+++ b/en/m/moorings.720209.wikitext
@@ -6,6 +6,7 @@
 # {{plural of|[[mooring]]}}
 #{{nautical}} A place or places where a [[vessel]] may be [[made fast]]
 
+[[ar:moorings]]
 [[io:moorings]]
 [[fi:moorings]]
 [[te:moorings]]
