--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -64,7 +64,7 @@ From the prefix [[mega-]].
 ==Icelandic==
 
 ===Verb===
-'''mega''' (+ {{acc}}) ([[má]], [[mátti]], [[máttu]], [[mátt]])
+'''mega''' (+ {{accusative}}) ([[má]], [[mátti]], [[máttu]], [[mátt]])
 # to be [[allowed]], to be [[permitted]], to [[may]]
 #: ''Þú '''mátt''' þetta ekki.''
 #:: You''''re''' not '''allowed''' to do that.
