--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -45,6 +45,7 @@
 * Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
 * Esperanto: [[denove]], [[ree]]
 * Estonian: [[jälle]]
+* Filipino: [[Nanaman]]
 * Finnish: [[taas]], [[uudelleen]], [[jälleen]], [[toistamiseen]], [[vielä kerran]]
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Georgian: [[ხელახლა]] (xelaxla), [[კვლავ]] (kvlav), [[ისევ]] (isev)
