--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -30,7 +30,7 @@
 ====Translations====
 {{trans-top|having already happened before}}
 * [[Afrikaans]]: [[weer]], [[alweer]]
-* Arabic: {{Arab|[[مرة اخرى]]}} {{unicode|(mára ’úxra)}}
+* Arabic: {{Arab|[[مرة اخرى]]}} (mára ’úxra)
 * Armenian: [[էլի]] (ēli)
 * [[Basque]]: [[berriro]]
 * [[Breton]]: [[adarre]]
@@ -45,7 +45,7 @@
 * Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
 * Esperanto: [[denove]], [[ree]]
 * Estonian: [[jälle]]
-* Filipino: [[Nanaman]]
+* Filipino: [[nanaman]]
 * Finnish: [[taas]], [[uudelleen]], [[jälleen]], [[toistamiseen]], [[vielä kerran]]
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Georgian: [[ხელახლა]] (xelaxla), [[კვლავ]] (kvlav), [[ისევ]] (isev)
@@ -75,7 +75,7 @@
 * {{trreq|Maori}}
 * {{trreq|Mongolian}}
 * Norwegian: {{t-|no|igjen}}
-* Persian: [[دگربار]]
+* Persian: {{fa-Arab|[[دگربار]]}}
 * Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
 * Portuguese: [[outra vez]], [[novemente]]
 * Romanian: {{t-|ro|iarăşi}}, {{t-|ro|din nou}}
