--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -42,3 +42,6 @@ Please distinguish between the Frisian language group, the West Frisian language
 
 ===See also===
 * {{pedialite|West Frisian language}}
+
+[[fy:West Frisian]]
+[[no:West Frisian]]
