--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -41,4 +41,5 @@ From the New Testament Greek form of Old Testament [[Zachariah]] and [[Zechariah
 # {{biblical character|lang=de}} [[#English|Zacharias]]
 # {{given name|male|lang=de}}.
 
+[[no:Zacharias]]
 [[ru:Zacharias]]
