--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -66,7 +66,7 @@
 * [[Khmer]]: {{Khmr|[[ទៀត]]}} (dtīət), {{Khmr|[[ម្ដងទៀត]]}} (mdorng dtīət)
 * Korean: [[다시]] (dasi)
 * Kurdish: {{KUchar|[[دیسان]]}}, {{KUchar|[[هه‌مدیس]]}}, {{KUchar|[[دوباره‌]]}}
-* {{trreq|Lao}}
+* Lao: {{t|lo|ອີກ|tr='iik|sc=Laoo}}
 * Latin: [[denuo]]
 * Latvian: {{t-|lv|pret|xs=Latvian}}
 * Lithuanian: [[vėl]]
