/* Verb */ Finnish translation <staff#5003693>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -70,13 +70,18 @@
 # {{transitive}} to [[supply]] (a business) with [[employee]]s
 
 ====Translations====
+{{trans-top|to supply with employees}}
 * Danish: forsyne med personale
+* {{t|fi|miehittää}}
 * French: doter en personnel
+{{trans-mid}}
+{{trans-bottom}}
 
 [[Category:English nouns with irregular plurals]]
 [[Category:English words with multiple plurals]]
 
 ----
+
 ==French==
 
 ===Noun===
