--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -26,7 +26,7 @@ See [[bind]]
 #: ''Your are not legally '''bound''' to reply.''
 # {{context|with infinitive}} Very likely to.
 #: ''They were '''bound''' to come into conflict eventually.
-# (''linguistics'') Refers to a type [[morpheme]] that cannot stand alone as a free word
+# {{linguistics}} Refers to a type [[morpheme]] that cannot stand alone as a free word
 
 ===Etymology 2===
 
