--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -89,8 +89,8 @@
 * [[Khmer]]: {{Khmr|[[កោះ]]}} (goh)
 * Korean: [[섬]] (seom)
 * Lao: {{t|lo|ດອນ|tr=döön|sc=Laoo}}
-* Latin: {{t+|la|insula|f}}
 {{trans-mid}}
+* Latin: {{t+|la|insula|f}}
 * Latvian: {{t-|lv|sala|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|sala|f|xs=Lithuanian}}
 * [[Low Saxon]]: {{t-|nds|Insel|xs=Low Saxon}}
@@ -202,7 +202,7 @@
 * {{ttbc|Volapük}}: [[nisul]]
 {{trans-bottom}}
 
-== Verb ==
+===Verb===
 {{en-verb}}
 
 # make into an island; set with islands
