--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -3,17 +3,4 @@
 ===Alternative spellings===
 *[[saw tooth]]
 
-===Adjective===
-{{en-adj|-}}
-
-#Shaped like a sawtooth.
-#{{context|mathematics|engineering}} Describing a function or [[waveform]] that consists of repeated triangular transitions when graphed.
-
-===Noun===
-{{en-noun|pl=sawteeth}}
-
-# A cutting [[bit]] of a [[saw]].
-
-[[nl:sawtooth]]
-[[pt:sawtooth]]
-[[ta:sawtooth]]
+No such word.
