/* English */ +syn; rfquote > rfquote-sense <apathist#5016750>

--- a/en/a/apathist.855078.wikitext
+++ b/en/a/apathist.855078.wikitext
@@ -3,4 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{rfquote}} One who has [[no]] [[feeling]] towards anything, or more specifically religion.
+# {{rfquote-sense}} One who has [[no]] [[feeling]] towards anything, or more specifically religion.
+
+====Synonyms====
+* [[apathete]]
