--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -7,7 +7,7 @@
 ===Pronunciation===
 * {{IPA|/weɪt/}}
 * {{audio|en-us-weight.ogg|Audio (US)}}
-* Rhymes: [[Rhymes:English:-eɪt|-eɪt]]
+* {{rhymes|eɪt}}
 
 ====Homophones====
 * [[wait]]
@@ -31,8 +31,8 @@
 {{trans-top|force due to gravity}}
 * Chinese (Simplified): [[重量]] (zhòng liàng)
 * Dutch: [[gewicht]]
-* [[Ewe]]: [[kpekpeme]] {{n}}
 * Estonian: {{t|et|kaal}}
+* [[Ewe]]: [[kpekpeme]] {{n}}
 * Finnish: [[paino]]
 * French: [[poids]]
 * German: [[Gewicht]] {{n}}
@@ -67,8 +67,8 @@
 * Chinese (Simplified): [[砝码]] (fá mǎ)
 * Estonian: {{t|et|kaaluma}}
 * Finnish: [[punnus]]
-* Japanese: [[分銅]] (fundō)
 {{trans-mid}}
+* Japanese: [[分銅]] (fundō)
 * Russian: [[гиря]] (gír'a) {{f}}
 * Swedish: [[vikt]] {{c}}
 {{trans-bottom}}
