add template rhymes, sorted/rebalanced translations <ermine#5017484>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -2,7 +2,7 @@
 
 ===Pronunciation===
 * {{IPA|/'ɜːmɪn/}}
-* Rhymes: [[Rhymes:English:-ɜː(r)mɪn|-ɜː(r)mɪn]]
+* {{rhymes|ɜː(r)mɪn}}
 
 ===Noun===
 {{wikipedia}}
@@ -81,9 +81,11 @@
 {{trans-bottom}}
 
 {{trans-top|a symbol of purity}}
+{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|the office of a judge}}
+{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|(heraldry) a white field with black spots}}
