--- a/en/o/ostensive.773720.wikitext
+++ b/en/o/ostensive.773720.wikitext
@@ -8,5 +8,9 @@
 ====Derived terms====
 * [[ostensive definition]]
 
+====Related terms====
+* [[ostentatious]]
+* [[ostentation]]
+
 [[vi:ostensive]]
 [[zh:ostensive]]
