* before IPA <marmot#5027957>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -8,7 +8,7 @@
 ===Pronunciation===
 * {{IPA|/ˈmɑrmət/}}, {{SAMPA|/mArm@t/}}
 
-*'''Hyphenation:''' mar·mot
+* '''Hyphenation:''' mar·mot
 
 ===Noun===
 {{en-noun}}
@@ -21,59 +21,59 @@
 
 ====Translations====
 {{top}}
-*Albanian: [[marmota]]
-*[[Basque]]: [[marmota]]
-*Belarusian: [[сурок]] ([[surok]])
-*[[Breton]]: [[moregan an alpoù]]
-*Bulgarian: [[мармот]] (marmot)
-*Chinese: [[土拨鼠]] tǔ bō shǔ
-*[[Catalan]]: [[marmota]]
-*Croatian: [[svizac]]
-*Czech: [[svišť]] {{m}}
-*Danish: [[murmeldyr]]
-*Dutch: marmot
-*Esperanto: [[marmoto]]
-*Estonian: [[ümiseja]]
-*Faroese: [[múrmildýr]]
-*Finnish: [[murmeli]]
-*French: [[marmotte]] {{f}}
-*[[West Frisian]]: [[bargemot]], marmot
-*[[Friulian]]: [[marmote]]
-*[[Gallegan]]: [[marmota]]
-*German: [[Murmeltier]] {{n}}
-*Greek: [[αρκτόμυς]] (arktómys) {{m}}, [[μαρμότα]] (marmóta) {{f}}
-*Hungarian: [[mormota]]
-*Icelandic: [[múrmeldýr]]
-*Irish: [[marmat]]
-*Italian: [[marmotta]]
-*Japanese: [[マーモット]] ''māmotto''
+* Albanian: [[marmota]]
+* [[Basque]]: [[marmota]]
+* Belarusian: [[сурок]] ([[surok]])
+* [[Breton]]: [[moregan an alpoù]]
+* Bulgarian: [[мармот]] (marmot)
+* Chinese: [[土拨鼠]] tǔ bō shǔ
+* [[Catalan]]: [[marmota]]
+* Croatian: [[svizac]]
+* Czech: [[svišť]] {{m}}
+* Danish: [[murmeldyr]]
+* Dutch: marmot
+* Esperanto: [[marmoto]]
+* Estonian: [[ümiseja]]
+* Faroese: [[múrmildýr]]
+* Finnish: [[murmeli]]
+* French: [[marmotte]] {{f}}
+* [[West Frisian]]: [[bargemot]], marmot
+* [[Friulian]]: [[marmote]]
+* [[Gallegan]]: [[marmota]]
+* German: [[Murmeltier]] {{n}}
+* Greek: [[αρκτόμυς]] (arktómys) {{m}}, [[μαρμότα]] (marmóta) {{f}}
+* Hungarian: [[mormota]]
+* Icelandic: [[múrmeldýr]]
+* Irish: [[marmat]]
+* Italian: [[marmotta]]
+* Japanese: [[マーモット]] ''māmotto''
 {{mid}}
-*Korean: [[마멋]] ''mameot''
-*[[Ladin]]: [[marmota]]
-*Latvian: [[murkšķis]]
-*Lithuanian: [[švilpikas]]
-*[[Lower Sorbian]]: [[boback]]
-*[[Macedonian]]: [[мрмот]] (mrmot)
-*Maltese: [[far il-ġebel]]
-*Mongolian: [[тарвага]] (tarwaga)
-*Norwegian: [[murmeldyr]]
-*[[Occitan]]: [[marmòta]], [[muret]]
-*Polish: [[świstak]]
-*Portuguese: [[marmota]]
-*Romanian: [[marmota]]
-*[[Romansh]]: [[muntanella]]
-*Russian: [[сурок]] (surok)
-*[[Sami]]: [[murmel]], [[murmelealli]]
-*[[Sardinian]]: [[marmotta]], [[drummiccioni]]
-*Serbian: [[мрмот]] (mrmot)
-*Slovak: [[svišť]]
-*Slovenian: [[svizec]] {{m}}
-*Spanish: [[marmota]] {{f}}
-*Swedish: [[murmeldjur]]
-*Turkish: [[dağ sıçanı]]
-*Ukrainian: [[бабак]] (babak)
-*[[Upper Sorbian]]: [[bobak]]
-*Welsh: [[twrlla]], marmot
+* Korean: [[마멋]] ''mameot''
+* [[Ladin]]: [[marmota]]
+* Latvian: [[murkšķis]]
+* Lithuanian: [[švilpikas]]
+* [[Lower Sorbian]]: [[boback]]
+* [[Macedonian]]: [[мрмот]] (mrmot)
+* Maltese: [[far il-ġebel]]
+* Mongolian: [[тарвага]] (tarwaga)
+* Norwegian: [[murmeldyr]]
+* [[Occitan]]: [[marmòta]], [[muret]]
+* Polish: [[świstak]]
+* Portuguese: [[marmota]]
+* Romanian: [[marmota]]
+* [[Romansh]]: [[muntanella]]
+* Russian: [[сурок]] (surok)
+* [[Sami]]: [[murmel]], [[murmelealli]]
+* [[Sardinian]]: [[marmotta]], [[drummiccioni]]
+* Serbian: [[мрмот]] (mrmot)
+* Slovak: [[svišť]]
+* Slovenian: [[svizec]] {{m}}
+* Spanish: [[marmota]] {{f}}
+* Swedish: [[murmeldjur]]
+* Turkish: [[dağ sıçanı]]
+* Ukrainian: [[бабак]] (babak)
+* [[Upper Sorbian]]: [[bobak]]
+* Welsh: [[twrlla]], marmot
 {{bottom}}
 {{commons|Marmota}}
 
@@ -82,11 +82,12 @@
 ----
 
 ==French==
+
 ===Etymology===
 Probably from {{term|marmotter}}.
 
 ===Pronunciation===
-{{IPA|/maʁmo/}}
+* {{IPA|/maʁmo/}}
 
 ===Noun===
 {{fr-noun|m}}
