--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -37,6 +37,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 {{trans-mid}}
 * Italian: {{t-|it|bambù|m}}
 * Japanese: [[竹]] (たけ, take)
+* Lao: {{t|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo}}
 * Malay: [[pokok]] [[buluh]]
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбук|m|sc=Cyrl}}
