iwiki +el, oc <badger#5031680>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -126,6 +126,7 @@
 [[bg:badger]]
 [[de:badger]]
 [[et:badger]]
+[[el:badger]]
 [[fa:badger]]
 [[fr:badger]]
 [[io:badger]]
@@ -133,6 +134,7 @@
 [[lt:badger]]
 [[hu:badger]]
 [[nl:badger]]
+[[oc:badger]]
 [[pl:badger]]
 [[ru:badger]]
 [[fi:badger]]
