convert table to IPA and X-SAMPA templates (pattern 9) <malam#5033212>

--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -1,12 +1,7 @@
 ==Indonesian==
 
 ===Pronunciation===
-{| border=1 cellpadding=5
-! [[w:IPA|IPA]] !! [[w:X-SAMPA|X-SAMPA]]
-|-
-| {{IPAchar|/ˈmalam/}} || /"malam/
-|}
-
+* {{IPA|/ˈmalam/}}, {{X-SAMPA|/"malam/}}
 ===Noun===
 {{infl|id|noun}}
 
