iwiki +is, ja <seize#5035564>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -87,11 +87,13 @@ From {{etyl|la|fr}} {{term|sedecim|sēdecim|lang=la}}.
 [[ko:seize]]
 [[hy:seize]]
 [[io:seize]]
+[[is:seize]]
 [[it:seize]]
 [[lo:seize]]
 [[lt:seize]]
 [[hu:seize]]
 [[nl:seize]]
+[[ja:seize]]
 [[pl:seize]]
 [[pt:seize]]
 [[ro:seize]]
