iwiki +no <bent#5036613>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -125,6 +125,7 @@ From Persian {{fa-Arab|[[بند]]}} (''band'').
 [[ku:bent]]
 [[hu:bent]]
 [[ja:bent]]
+[[no:bent]]
 [[ru:bent]]
 [[simple:bent]]
 [[fi:bent]]
