/* {{initialism}} */ mark existing def as US. Add another def ({{Ireland}} National Roads Authority) <NRA#5043356>

--- a/en/n/NRA.26207.wikitext
+++ b/en/n/NRA.26207.wikitext
@@ -2,6 +2,8 @@
 ==={{initialism}}===
 {{wikipedia|National Rifle Association}}
 '''NRA'''
-#National Rifle Association
+
+# {{US}} National Rifle Association
+# {{Ireland}} National Roads Authority
 
 [[et:NRA]]
