--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -16,6 +16,7 @@
 * Finnish: {{t+|fi|nelikulmio}}
 * French: {{t+|fr|quadrilatère}}
 * German: {{t+|de|Viereck}}
+* Greek: {{t+|el|τετράπλευρο|n}}
 * Hebrew: {{he-translation|מרובע|merubá}} {{m}}
 * Hindi: [[चतुर्भुज]]
 {{trans-mid}}
@@ -34,6 +35,7 @@
 ====Translations====
 {{trans-top|having four sides}}
 * Dutch: [[vierhoekig]]
+* Greek: {{t+|el|τετράπλευρος}}
 * Hebrew: {{he-translation|מרובע|merubá}} {{m}}
 * Hindi: [[चतुर्भुजीय]]
 {{trans-mid}}
