iwiki +no <bound#5044805>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -183,6 +183,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 [[ku:bound]]
 [[hu:bound]]
 [[ja:bound]]
+[[no:bound]]
 [[ru:bound]]
 [[ta:bound]]
 [[te:bound]]
