+rhymes template <theory#5047419>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -5,7 +5,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 
 ===Pronunciation===
 * {{audio|en-us-theory.ogg|Audio (US)}}
-*: Rhymes: [[Rhymes:English:-ɪəri|-ɪəri]]
+*: {{rhymes|ɪəri}}
 
 ===Noun===
 {{en-noun|theor|ies|-}}
