+verb form <frizzante#5048075>

--- a/en/f/frizzante.745844.wikitext
+++ b/en/f/frizzante.745844.wikitext
@@ -1,4 +1,8 @@
 ==Italian==
+===Verb===
+'''frizzante'''
+
+# {{present participle of|[[frizzare#Italian|frizzare]]|lang=Italian}}
 
 ===Adjective===
 {{it-adj|frizzant|e|i}}
