--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -5,7 +5,7 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 
 ===Pronunciation===
 * [[IPA]]: //
-* [[SAMPA]]: /QktIli@n/
+* {{SAMPA|/QktIli@n/}}
 * Hyphenation: oct-il-li-on, oc-til-li-on
 *: {{rhymes|ɪljən}}
 
