+rhymes template, trans link [[Breton]] <weasel#5057552>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -10,7 +10,7 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[weosule]]'', a weak 
 * {{IPA|/'wiːzəl/}}
 * {{audio|en-us-weasel.ogg|Audio (US)}}
 
-* Rhymes: [[Rhymes:English:-iːzəl|-iːzəl]]
+* {{rhymes|iːzəl}}
 
 ===Noun===
 {{wikipedia}}
@@ -22,8 +22,8 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[weosule]]'', a weak 
 
 ====Translations====
 {{trans-top|Mustela nivalis}}
-* Breton: {{t+|br|kaerell|}}
-* Chinese: {{t+|zh|黄鼠狼}} (huángshǔláng) 
+* [[Breton]]: {{t+|br|kaerell|}}
+* Chinese: {{t+|zh|黄鼠狼}} (huángshǔláng)
 * Czech: {{t-|cs|lasice|f}}
 * Danish: {{t+|da|brud|c}}
 * Dutch: {{t+|nl|wezel|f}}
