+rhymes template, sorted/rebalanced translations <rabbit#5058247>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -7,7 +7,7 @@
 * [[w:AHD|AHD]]: (''UK, US'') răb'it, (''Australia'') răb'ət
 * [[w:IPA|IPA]]: (''UK, US'') {{IPAchar|/ˈræbɪt/}}, (''Australia'') {{IPAchar|/ˈræbət/}}
 * [[w:SAMPA|SAMPA]]: (''UK, US'') /"r{bIt/, (''Australia'') /"r{b@t/
-* Rhymes: [[Rhymes:English:-æbɪt|-æbɪt]]
+* {{rhymes|æbɪt}}
 * Homophones: [[rabbet]]
 
 ===Etymology 1===
@@ -135,6 +135,7 @@ From Northern [[French]].
 {{trans-bottom}}
 
 {{trans-top|poor batsman}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ====Verb====
