iwiki +es, sw <thing#5060321>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -203,6 +203,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 [[zh-min-nan:thing]]
 [[dv:thing]]
 [[et:thing]]
+[[es:thing]]
 [[fr:thing]]
 [[ko:thing]]
 [[hy:thing]]
@@ -210,6 +211,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 [[id:thing]]
 [[it:thing]]
 [[kk:thing]]
+[[sw:thing]]
 [[ku:thing]]
 [[lo:thing]]
 [[la:thing]]
