--- a/en/b/biatch.741988.wikitext
+++ b/en/b/biatch.741988.wikitext
@@ -5,7 +5,7 @@
 
 ===Noun===
 {{en-noun|es}}
-
+bitches ha ha
 # {{pejorative|slang|[[gangsta]]}} alternative pronunciation of [[bitch]]
 #* '''2002''', Natika Waldon, ''Urban Affairs'', page 197:
 #*: “Fuck you, you son of a bitch!” Dana screamed, trying to cover herself. “Fuck your mamma, '''biatch'''!” he said as he kicked his door shut.
