/* Noun */ +Wikisaurus <crook#5063331>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -13,6 +13,9 @@
 # A [[bend]].
 #: ''She held the baby in the '''crook''' of her arm.''
 
+====Synonyms====
+* See also [[Wikisaurus:criminal]]
+
 ====Translations====
 {{trans-top|a criminal who steals}}
 * Finnish: [[rikollinen]], [[konna]]
