--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -24,7 +24,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 #: ''A '''theory''' is consistent if it has a model.''
 
 ====Synonyms====
-* [[Wikisaurus:supposition]]
+* See also [[Wikisaurus:supposition]]
 
 ====Derived terms====
 {{rel-top3|terms derived from theory}}
