* before IPA <Godzone#5076083>

--- a/en/g/Godzone.855219.wikitext
+++ b/en/g/Godzone.855219.wikitext
@@ -1,9 +1,10 @@
 ==English==
+
 ===Etymology===
 Contraction of ''[[God]][['s]] [[own]] [[country]]''.
 
 ===Pronunciation===
-{{IPA|/ˈgɒdzəʊn/}}
+* {{IPA|/ˈgɒdzəʊn/}}
 
 ===Noun===
 {{en-noun|-}}
