template enPR/IPA/SAMPA <dud#5081116>

--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -4,7 +4,7 @@
 Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond that.
 
 ===Pronunciation===
-* dŭd, /dʌd/, /<tt>dVd</tt>/
+* {{enPR|dŭd}}, {{IPA|/dʌd/}}, {{SAMPA|/dVd/}}
 *: [[Rhymes:English:-ʌd|Rhymes: -ʌd]]
 
 ===Noun===
