--- a/en/s/synchrocyclotron.742248.wikitext
+++ b/en/s/synchrocyclotron.742248.wikitext
@@ -1,15 +1,16 @@
 ==English==
+
 ===Etymology===
 From ''[[synchro-]]'' + ''[[cyclotron]]''.
 
 ===Pronunciation===
-{{IPA|/sɪŋkɹəʊˈsaɪklətɹɒn/}}
+* {{IPA|/sɪŋkɹəʊˈsaɪklətɹɒn/}}
 
 ===Noun===
 {{en-noun}}
 
 # A [[particle accelerator]] like a [[cyclotron]], but which operates at variable frequency to account for the particles gaining energy, allowing for greater energies to be achieved.
-#*'''2004''': The '''synchrocyclotron''' was able to accelerate protons to sufficient energies that collisions with nuclei produce pions, the lightest particles that, we now know, are made from a single quark and an antiquark. — Frank Close, ''Particle Physics: A Very Short Introduction'' (Oxford 2004, p. 50)
+#* '''2004''': The '''synchrocyclotron''' was able to accelerate protons to sufficient energies that collisions with nuclei produce pions, the lightest particles that, we now know, are made from a single quark and an antiquark. — Frank Close, ''Particle Physics: A Very Short Introduction'' (Oxford 2004, p. 50)
 
 [[fr:synchrocyclotron]]
 [[vi:synchrocyclotron]]
