--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -134,6 +134,7 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[weosule]]'', a weak 
 [[fa:weasel]]
 [[fr:weasel]]
 [[fy:weasel]]
+[[ko:weasel]]
 [[io:weasel]]
 [[it:weasel]]
 [[hu:weasel]]
