--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -42,6 +42,7 @@ Please distinguish between the Frisian language group, the West Frisian language
 
 ===See also===
 * {{pedialite|West Frisian language}}
+{{ISO 639|1code=fy|3code=fry}}
 
 [[fy:West Frisian]]
 [[no:West Frisian]]
