--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -1,5 +1,5 @@
-{{see|Sir|sír|sır}}
 {{wikipedia|dab=sir (disambiguation)}}
+{{also|Sir|sír|sır}}
 ==English==
 
 ===Etymology===
@@ -33,8 +33,8 @@ Via {{etyl|xno}} from {{etyl|la}} {{term|senior||[[older]], [[elder]]|lang=la}},
 
 {{trans-top|An address to any male, especially if his name or proper address is unknown}}
 * Dutch: [[meneer]] {{m}}, [[mijnheer]] {{m}}
-* Kurdish: {{KUchar|[[کاک]]}}
 {{trans-mid}}
+* Kurdish: {{KUchar|[[کاک]]}}
 {{trans-bottom}}
 
 {{checktrans-top}}
