--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -37,14 +37,14 @@ Old English ''[[þonne]]''
 * Czech: {{t+|cs|tehdy}}
 * Dutch: {{t+|nl|toen}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
-* Finnish: [[silloin]] [[:fi:silloin|^]]
+* Finnish: {{t|fi|silloin}}
 * French: [[alors]], [[à]] [[cette]] [[époque]]-[[là]]
 * German: {{t+|de|dann}}, {{t+|de|damals}}
 * Greek: {{t+|el|τότε|sc=Grek}}
 * Hebrew: [[אז]] (az)
 * Japanese: {{t|ja|そのとき|tr=sono toki|sc=Jpan}}, {{t|ja|その時点|tr=sono jiten|sc=Jpan}}
 {{trans-mid}}
-* Kurdish: [[hingê]], [[wê]] [[dem]]ê, [[wî]] [[çax]]î, wî [[wext]]î, wê [[gav]]ê
+* Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
 * Malay: [[pada masa yang sama]]
 * Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: [[wówczas]], [[wtedy]]
@@ -59,9 +59,9 @@ Old English ''[[þonne]]''
 {{trans-top|soon afterward}}
 * Albanian: [[pastaj]]
 * Czech: {{t+|cs|pak}}, {{t-|cs|potom}}
-* Dutch: [[toen]] ''past tense'', [[dan]] ''present and future tenses''
+* Dutch: [[toen]] ''(past tense)'', [[dan]] ''(present and future tenses)''
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
-* Finnish: [[sitten]] [[:fi:sitten|^]]
+* Finnish: {{t|fi|sitten}}
 * French: {{t+|fr|puis}}
 * Japanese: {{t|ja|それから|tr=sorekara|sc=Jpan}}, {{t|ja|その後|tr=sono ato|sc=Jpan}}, {{t|ja|その後|tr=sono go|sc=Jpan}}, {{t-|ja|そして|tr=soshite|sc=Jpan}}
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
@@ -70,7 +70,7 @@ Old English ''[[þonne]]''
 * Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: (a) [[następnie]], (a) [[potem]]
 * Portuguese: [[depois]], [[em seguida]]
-* Russian: {{t+|ru|затем|tr=zat'ém|sc=Cyrl}}, {{t+|ru|потом|tr=potóm|sc=Cyrl}}
+* Russian: {{t+|ru|затем|tr=zatém|sc=Cyrl}}, {{t+|ru|потом|tr=potóm|sc=Cyrl}}
 * Slovenian: [[potem]]
 * Spanish: {{t-|es|luego}}
 * Swedish: {{t-|sv|därpå}}, {{t+|sv|sen}}, {{t+|sv|sedan}}, {{t+|sv|så}}
@@ -81,7 +81,7 @@ Old English ''[[þonne]]''
 * Czech: {{t+|cs|pak}}, {{t-|cs|potom}}
 * Dutch: {{t+|nl|dan}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
-* Finnish: [[sitten]] [[:fi:sitten|^]]
+* Finnish: {{t|fi|sitten}}
 * French: {{t+|fr|puis}}
 * German: {{t+|de|danach}}
 * Japanese: {{t|ja|それから|tr=sorekara|sc=Jpan}}, {{t|ja|その後|tr=sono ato|sc=Jpan}}, {{t|ja|その後|tr=sono go|sc=Jpan}}, {{t|ja|次に|tr=tsugini|sc=Jpan}}
@@ -92,18 +92,18 @@ Old English ''[[þonne]]''
 * Polish: (a) [[następnie]], (a) [[potem]]
 * Portuguese: [[seguidamente]], [[sequencialmente]]
 * Romanian: [[atunci]]
-* Russian: {{t+|ru|затем|tr=zat'ém|sc=Cyrl}}, {{t+|ru|потом|tr=potóm|sc=Cyrl}}
+* Russian: {{t+|ru|затем|tr=zatém|sc=Cyrl}}, {{t+|ru|потом|tr=potóm|sc=Cyrl}}
 * Slovenian: [[potem]]
 * Spanish: {{t-|es|después}}
 * Swedish: {{t+|sv|dessutom}}, {{t+|sv|sen}}, {{t+|sv|sedan}}
 {{trans-bottom}}
 
 {{trans-top|in that case}}
-* Arabic: {{Arab|[[ثم]]}} {{unicode|(θúmma)}}
+* Arabic: {{Arab|[[ثم]]}} (θúmma)
 * Czech: {{t+|cs|pak}}, {{t-|cs|potom}}
 * Dutch: {{t+|nl|dan}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
-* Finnish: [[niin]] [[:fi:niin|^]]
+* Finnish: {{t|fi|niin}}
 * French: {{t+|fr|alors}}
 * German: [[denn]]
 * Japanese: {{t|ja|そのとき|tr=sonotoki|sc=Jpan}}, {{t-|ja|だから|tr=dakara|sc=Jpan}}
@@ -122,9 +122,9 @@ Old English ''[[þonne]]''
 {{trans-top|at the same time; on the other hand}}
 * Dutch: {{t|nl|trouwens}}
 * Esperanto: {{t-|eo|tamen|xs=Esperanto}}
-* Finnish: [[toisaalta]] [[:fi:toisaalta|^]]
+* Finnish: {{t|fi|toisaalta}}
 * Japanese: {{t|ja|そのとき|tr=sonotoki|sc=Jpan}}
-* Kurdish: li [[mil]]ê din, [[li]] [[alî]] [[dî]]
+* Kurdish: li [[mil|milê]] din, [[li]] [[alî]] [[dî]]
 {{trans-mid}}
 * Polish: {{t+|pl|również}}, {{t+|pl|także}}
 * Portuguese: [[ao mesmo tempo]], [[simultaneamente]]; [[entretanto]]
