--- a/en/v/voornamelijk.4107.wikitext
+++ b/en/v/voornamelijk.4107.wikitext
@@ -6,7 +6,7 @@ From ''[[voornaam]]'' + ''[[-lijk]]''.
 
 ===Adverb===
 '''voornamelijk'''
-# [[mainly]], [[mostly]]
+# [[mainly]], [[mostly]]; [[predominantly]]
 
 [[Category:Dutch adverbs]]
 
