--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -13,7 +13,7 @@
 {{en-noun|species}}
 
 # A group of plants or animals having [[similar]] [[appearance]].
-#: ''This '''species''' of rock is unique to the area.''
+#: ''This '''species''' of animal is unique to the area.''
 # {{context|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
 #* Darwin, ''On the Origin of '''Species''''':
 #*: ''Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.''
