iwiki +fi, hu <dormouse#5106768>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -75,8 +75,10 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 [[fr:dormouse]]
 [[gl:dormouse]]
 [[io:dormouse]]
+[[hu:dormouse]]
 [[ru:dormouse]]
 [[sl:dormouse]]
+[[fi:dormouse]]
 [[te:dormouse]]
 [[vi:dormouse]]
 [[zh:dormouse]]
