--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -195,6 +195,7 @@ From [[Cockney rhyming slang]] ''[[rabbit and pork]]'', to talk.
 [[es:rabbit]]
 [[fa:rabbit]]
 [[fr:rabbit]]
+[[gl:rabbit]]
 [[ko:rabbit]]
 [[hy:rabbit]]
 [[io:rabbit]]
