--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -33,6 +33,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 ====Translations====
 {{trans-top|part of a whole}}
 * [[Catalan]]: [[fracció]], {{f}}
+* Croatian: {{t|hr|dio|alt=dȉo|m}}, {{t|hr|odsječak|alt=òdsječak|m}}
 * Czech: [[zlomek]] {{m}}
 * Finnish: [[murto-osa]]
 * French: [[fraction#French|fraction]] {{f}}
@@ -45,6 +46,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 
 {{trans-top|in arithmetic}}
 * [[Catalan]]: [[fracció]], {{f}}
+* Croatian: {{t|hr|razlomak|alt=rázlomak|m}}
 * Czech: [[zlomek]] {{m}}
 * Dutch: [[breuk]] {{c}}
 * Finnish: [[murtoluku]]
