+rhymes template, convert F. to etyl|fr, convert OF. to etyl|fro, sorted/rebalanced translations <attend#5126229>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -1,11 +1,11 @@
 ==English==
 
 ===Etymology===
-From {{OF.}} ''[[atendre]]'' ({{F.}} ''[[attendre]]'').
+From {{etyl|fro}} ''[[atendre]]'' ({{etyl|fr}} ''[[attendre]]'').
 
 ===Pronunciation===
 * {{audio|en-us-attend.ogg|Audio (US)}}
-* Rhymes: [[Rhymes:English:-ɛnd|-ɛnd]]
+* {{rhymes|ɛnd}}
 
 ===Verb===
 {{en-verb}}
@@ -21,15 +21,15 @@ From {{OF.}} ''[[atendre]]'' ({{F.}} ''[[attendre]]'').
 {{trans-top|to be at an event}}
 * Finnish: {{t+|fi|osallistua}}, {{t+|fi|olla}} {{t+|fi|läsnä}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
+{{trans-mid}}
 * Hungarian: {{t|hu|eljár}}, {{t+|hu|jár}}
 * Portuguese: [[assistir]], [[participar em]], [[estar presente em]]
-{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|to pay attention to; to commit oneself to; to give thought and care to}}
 * Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
-* German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 {{trans-mid}}
+* German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 {{trans-bottom}}
 
 {{checktrans-top}}
