/* Pronunciation */ request checking of US pronunciation. formatting <blow#5127531>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -5,10 +5,12 @@
 From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|lang=ang}} from {{proto|Germanic|blæanan}} from {{proto|Indo-European|bhle-}} "to swell, blow up".
 
 ===Pronunciation===
-* {{IPA|/blɔʊ/}}, /bləʊ/
-* {{SAMPA|/'blOU/}}
-* {{audio|en-us-blow.ogg|Audio (US)}}
+* {{a|UK}} {{IPA|/bləʊ/}}, {{SAMPA|/"bl@U/}}
 *: Rhymes: [[Rhymes:English:-əʊ|-əʊ]]
+* {{a|US}} {{IPA|/blɔʊ/}}, {{SAMPA|/'blOU/}}
+*: {{audio|en-us-blow.ogg|Audio (US)}}
+
+{{rfp|is the US pronunciation really /ɔʊ/ not /oʊ/?}}
 
 ===Verb===
 {{en-verb|blows|blowing|'''[[blew]]''' or (''dialect'') '''[[blowed]]'''|'''[[blown]]''' or (''dialect'') '''[[blowed]]'''}}
