+rhymes template, +trans-see template, sorted/rebalanced translations <blow#5127630>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -6,7 +6,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/bləʊ/}}, {{SAMPA|/"bl@U/}}
-*: Rhymes: [[Rhymes:English:-əʊ|-əʊ]]
+*: {{rhymes|əʊ}}
 * {{a|US}} {{IPA|/blɔʊ/}}, {{SAMPA|/'blOU/}}
 *: {{audio|en-us-blow.ogg|Audio (US)}}
 
@@ -202,10 +202,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * [[Telugu]]: [[దెబ్బ]] (2)
 {{trans-bottom}}
 
-{{trans-top|cocaine}}
-See: [[cocaine]]
-{{trans-bottom}}
-
+{{trans-see|cocaine}}
 {{trans-top|strong wind}}
 * Finnish: [[puhuri]], [[kova]] [[tuuli]]
 {{trans-mid}}
