--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -6,7 +6,7 @@ Old English ''[[leþer]]''
 
 ===Pronunciation===
 * {{audio|en-us-leather.ogg|Audio (US)}}
-* Rhymes: [[Rhymes:English:-ɛðə(r)|-ɛðə(r)]]
+* {{rhymes|ɛðə(r)}}
 
 ===Noun===
 {{en-noun|s|-}}
