convert L. to etyl|la, convert OF. to etyl|fro, trans link [[Sami]] <ferret#5135946>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -3,7 +3,7 @@
 [[Image:Ilder.jpg|thumb|Ferrets (Mustela putorius)]]
 
 ===Etymology===
-From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thief, ferret’, diminutive of {{L.}} ''[[fur#Latin|fur]]'' ‘thief’.
+From {{etyl|fro}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thief, ferret’, diminutive of {{etyl|la}} ''[[fur#Latin|fur]]'' ‘thief’.
 
 ===Pronunciation===
 * {{enPR|fĕr'ət}}, {{IPA|/ˈfɛrɪt/}}, {{SAMPA|/"fer@t/}}
@@ -51,7 +51,7 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 * Romanian: [[nevăstuică]]
 * Romansh: [[furet]]
 * Russian: [[хорёк африканский]] (horjok afrikanskij)
-* Sami: [[albinočáhppesbuoidda]], [[ferrehtta]]
+* [[Sami]]: [[albinočáhppesbuoidda]], [[ferrehtta]]
 * [[Sardinian]]: [[furittu]], [[fughittu]]
 * [[Scots]]: [[futret]] (''Doric dilect'')
 * [[Scottish Gaelic]]: [[fearaid]]
