/* {{initialism}} */ <CD-RW#5149410>

--- a/en/c/CD-RW.26222.wikitext
+++ b/en/c/CD-RW.26222.wikitext
@@ -3,7 +3,7 @@
 ==={{initialism}}===
 '''CD-RW''' ''or'' '''CD/RW'''
 
-# Compact Disk - Read Writeable.  A form of digital media that is based on the use of a laser to read from a plastic disc.  It can be written to multiple times.
+# Compact Disk - Read Writeable.  A form of digital media that is based on the use of a laser to read from a plastic disc.  It can be written to multiple times. Its strange to be honest
 
 ====Translations====
 *Serbian: piši-briši cede
