/* English */ request pronunciation <hawaiite#5163109>

--- a/en/h/hawaiite.776678.wikitext
+++ b/en/h/hawaiite.776678.wikitext
@@ -1,8 +1,11 @@
 ==English==
 [[Image:Reunion geologie hawaiite Mare a Vieille Place dsc09326.jpg|thumb|Hawaiite]]
-===Etymology===
 
+===Etymology===
 {{suffix|Hawaii|ite}}
+
+===Pronunciation===
+{{rfp}}
 
 ===Noun===
 {{en-noun}}
