--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -42,7 +42,7 @@
 * Croatian: {{t-|hr|opet}}
 * Czech: [[zase]], [[opět]], [[znova]]
 * Danish: {{t-|da|igen}}
-* Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
+* Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[alweer]], [[wederom]]
 * Esperanto: [[denove]], [[ree]]
 * Estonian: [[jälle]]
 * Filipino: [[nanaman]]
