/* Verb */ + 2 senses <break#5186893>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -44,8 +44,13 @@
 # {{transitive|gaming|_|slang}} To [[design]] or use a [[powerful]] (yet [[legal]]) strategy that unbalances the game in a player's favor.
 #: ''Letting white have three extra queens would '''break''' chess.''
 # {{transitive|media|ergative}} to [[disclose]] or [[make known]] an item of [[news]] etc
-# {{context|of a storm or spell of|_|weather|UK}} to end
+# {{intransitive|of a storm or spell of|_|weather}} to end
 #: ''The forecast says the hot weather will '''break''' by midweek''
+# {{transitive}} To ruin financially.
+#: ''Local economic problems '''broke''' some smaller banks.''
+# {{transitive|US}} To divide into smaller units.
+#: ''The wholesaler '''broke''' the container loads into palettes and boxes for local retailers.''
+#: ''Can you '''break''' a hundred-dollar bill for me?
 
 ====Usage notes====
 The sense relating to a spell of weather is most likely to be used after a period of persistent good or bad weather; it is rarely used to signify the end of changeable conditions.
