iwiki +sv <cauliflower#5192881>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -73,6 +73,7 @@
 [[nl:cauliflower]]
 [[pl:cauliflower]]
 [[fi:cauliflower]]
+[[sv:cauliflower]]
 [[ta:cauliflower]]
 [[te:cauliflower]]
 [[vi:cauliflower]]
