convert OHG. to etyl|goh <bitten#5216153>

--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/'bitten/}}
-*:{{rhymes|ɪtən}}
+* {{IPA|/'bitten/}}
+*: {{rhymes|ɪtən}}
 
 ===Verb===
 '''bitten'''
@@ -25,10 +25,10 @@
 ==German==
 
 ===Etymology===
-{{OHG.|de}} {{term|bitten|lang=goh}}, originally {{term|biddan|lang=de}}.
+{{etyl|goh|de}} {{term|bitten|lang=goh}}, originally {{term|biddan|lang=de}}.
 
 ===Pronunciation===
-*{{audio|De-at-bitten.ogg|audio (Austria)}}
+* {{audio|De-at-bitten.ogg|audio (Austria)}}
 
 ===Verb===
 {{de-verb-strong|bittet|bat|gebeten}}
