/* Translations */ fi <consumption#5217217>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -40,17 +40,21 @@
 *Spanish: [[consumo]]
 {{trans-bottom}}
 
-{{trans-top|tuberculosis}}
-*Bulgarian: [[туберкулоза]] {{f}}
-*[[Catalan]]: [[tuberculosi]]
-*Czech: [[tuberkulóza]] {{f}}, [[souchotiny]]
-*Finnish: [[tuberkuloosi]]
-*French: [[tuberculose]] {{f}}
-*German: [[Schwindsucht]] {{f}}, [[Tuberkulose]] {{f}}
+{{trans-top|wasting-away of the human body through disease}}
+* Finnish: {{t|fi|riutuminen}}
 {{trans-mid}}
-*Russian: [[чахотка]] (čakhótka) {{f}}
-*Turkish: [[tüberküloz]]
-*Spanish: [[tuberculosis]]
+{{trans-bottom}}
+
+{{checktrans-top}}
+* {{ttbc|Bulgarian}}: [[туберкулоза]] {{f}}
+* {{ttbc|Catalan}}: [[tuberculosi]]
+* {{ttbc|Czech}}: [[tuberkulóza]] {{f}}, [[souchotiny]]
+* {{ttbc|French}}: [[tuberculose]] {{f}}
+{{trans-mid}}
+* {{ttbc|German}}: [[Schwindsucht]] {{f}}, [[Tuberkulose]] {{f}}
+* {{ttbc|Russian}}: [[чахотка]] (čakhótka) {{f}}
+* {{ttbc|Turkish}}: [[tüberküloz]]
+* {{ttbc|Spanish}}: [[tuberculosis]]
 {{trans-bottom}}
 
 [[ar:consumption]]
